fix latest rimraf glob, LGTM no longer available
fix noImplicitUseStrict

--- a/package.json
+++ b/package.json
@@ -49,10 +49,10 @@
     "benchmark": "cd etc/bench && yarn install && yarn start",
     "build:test": "tsc -m commonjs -t es2019 __tests__/test.ts",
     "build": "tsc && yarn fire:tool fix_import_path",
-    "clean": "rimraf build/* dist/* logs/*.tsbuildinfo",
+    "clean": "rimraf -g build/* dist/* logs/*.tsbuildinfo",
     "copy:files": "yarn fire:tool copyfiles",
     "copy:types": "yarn fire:tool copytypes",
-    "dist": "rimraf \"dist/!(webpack|umd)\" && yarn build && yarn copy:files && orgpkg -p -k defs",
+    "dist": "rimraf -g \"dist/!(webpack|umd)\" && yarn build && yarn copy:files && orgpkg -p -k defs",
     "fire:tool": "bash scripts/tool.sh",
     "grmc-test:cjs": "node scripts/batch-rmc-test.js -progress -collectRegex -showNoops -timeMeasure -collectJSDocTag",
     "ic": "rimraf yarn.lock node_modules && yarn install",
@@ -60,7 +60,7 @@
     "jstool": "node ./scripts/tiny/tools",
     "patch:tag": "yarn fire:tool patch_with_tag",
     "preserve:jsdoc": "yarn jstool -cmd rmc -rmc4ts -basePath \"./dist/cjs,./dist/cjs/gulp\" -test \"/\\.(js|d\\.ts)$/\"",
-    "pretest": "rimraf ./coverage/*",
+    "pretest": "rimraf -g ./coverage/*",
     "test": "bash -c \"[ -z $JEST_CONF ] && JEST_CONF=jest.config.js; jest --silent=false -c=$JEST_CONF\"",
     "toggle:cmts": "yarn jstool -cmd cmtTrick -targets \"js-scanner.ts,\" -basePath src",
     "ts:check": "tsc --noemit",
