--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "rm-cstyle-cmts",
-  "version": "3.3.9",
+  "version": "3.3.10",
   "description": "remove c style comments from text file(javascript source, json file etc...",
   "private": false,
   "main": "./cjs/index.js",
@@ -79,6 +79,7 @@
     "gulp": "^4.0.2",
     "jest": "^29.7.0",
     "organize-pkg": "^1.2.4",
+    "replace": "^1.2.2",
     "rimraf": "^5.0.5",
     "ts-jest": "^29.1.1",
     "ts-loader": "^9.4.4",
