--- a/package.json
+++ b/package.json
@@ -66,8 +66,12 @@
     "ts:check": "tsc --noemit",
     "up": "yarn upgrade-interactive --latest",
     "v": "yarn jstool -cmd version -extras \"./src/index.ts,\"",
-    "webpack": "npm run fire:tool -- webpack"
+    "webpack": "npm run fire:tool -- webpack",
+    "strip:strict": "jstool -cmd stripSome -regex \"/.use strict.;\\s/g\" -targets \"dist/cjs/index.js,dist/cjs/js-scanner.js,dist/cjs/gulp/index.js\""
   },
+  "//": [
+    "NOTE: `strip:strict` use for publish (dist)"
+  ],
   "devDependencies": {
     "@jeffy-g/cpx": "^1.6.4",
     "@types/gulp": "^4.0.17",
