--- a/package.json
+++ b/package.json
@@ -67,7 +67,8 @@
     "up": "yarn upgrade-interactive --latest",
     "v": "yarn jstool -cmd version -extras \"./src/index.ts,\"",
     "webpack": "npm run fire:tool -- webpack",
-    "strip:strict": "jstool -cmd stripSome -regex \"/.use strict.;\\s/g\" -targets \"dist/cjs/index.js,dist/cjs/js-scanner.js,dist/cjs/gulp/index.js\""
+    "publish": "npm publish ./dist",
+    "prepublish": "yarn jstool -cmd stripSome -regex \"/.use strict.;\\s/g\" -targets \"dist/cjs/index.js,dist/cjs/js-scanner.js,dist/cjs/gulp/index.js\""
   },
   "//": [
     "NOTE: `strip:strict` use for publish (dist)"
