--- a/package.json
+++ b/package.json
@@ -81,6 +81,7 @@
     "@types/vinyl": "^2.0.11",
     "@typescript-eslint/eslint-plugin": "^7.0.0",
     "@typescript-eslint/parser": "^7.0.0",
+    "ansi-colors": "^4.1.3",
     "eslint": "^8.55.0",
     "gulp": "^5.0.0",
     "jest": "^29.7.0",
