--- a/src/gulp/package.json
+++ b/src/gulp/package.json
@@ -9,7 +9,8 @@
   	
   },
   "keywords": [
-    "gulp plugin",
+    "gulp",
+    "plugin",
     "remove",
     "delete",
     "comment",
@@ -22,7 +23,7 @@
   "main": "./index.js",
   "types": "./index.d.ts",
   "author": "jeffy-g",
-  "license": "Apache-2.0",
+  "license": "MIT",
   "bugs": {
   
   },
