--- a/package.json
+++ b/package.json
@@ -44,7 +44,7 @@
     "projectname": "rm-cstyle-cmts"
   },
   "scripts": {
-    "all": "yarn clean && yarn lint && yarn dist && yarn webpack && yarn copy:types && yarn preserve:jsdoc",
+    "all": "yarn clean && eslint && yarn dist && yarn webpack && yarn copy:types && yarn preserve:jsdoc",
     "bench": "node -v && node ./build/cjs/bench/ -f samples/es6.js -l 2000 -ol 10 | node ./build/cjs/bench/ -p",
     "benchmark": "cd etc/bench && yarn install && yarn start",
     "build:test": "tsc -m commonjs -t es2019 __tests__/test.ts",
@@ -56,7 +56,7 @@
     "fire:tool": "bash scripts/tool.sh",
     "grmc-test:cjs": "node scripts/batch-rmc-test.js -progress -collectRegex -showNoops -timeMeasure -collectJSDocTag",
     "ic": "rimraf yarn.lock node_modules && yarn install",
-    "lint": "eslint src/**/*.ts",
+    "lint": "eslint",
     "jstool": "node ./scripts/tiny/tools",
     "patch:tag": "yarn fire:tool patch_with_tag",
     "preserve:jsdoc": "yarn fire:tool del_usestrict && yarn jstool -cmd rmc -rmc4ts -basePath \"./dist/cjs,./dist/cjs/gulp\" -test \"/\\.(js|d\\.ts)$/\"",
@@ -72,26 +72,28 @@
     "strip:strict": "yarn jstool -cmd stripSome -regex \"/.use strict.;\\s/g\" -targets \"dist/cjs/index.js,dist/cjs/js-scanner.js,dist/cjs/gulp/index.js\""
   },
   "//": [
-    "NOTE: `strip:strict` use for publish (dist)"
+    "NOTE: `strip:strict` use for publish (dist)",
+    "ESLint JavaScript Plugin(rules): @eslint/js"
   ],
   "devDependencies": {
-    "@jeffy-g/cpx": "^1.6.4",
+    "@jeffy-g/cpx": "^1.6.6",
+    "@stylistic/eslint-plugin": "^3.0.0",
     "@types/gulp": "^4.0.17",
     "@types/jest": "^29.5.14",
     "@types/vinyl": "^2.0.12",
-    "@typescript-eslint/eslint-plugin": "^7.0.0",
-    "@typescript-eslint/parser": "^7.0.0",
+    "@typescript-eslint/parser": "^8.22.0",
     "ansi-colors": "^4.1.3",
-    "eslint": "^8.55.0",
+    "eslint": "^9.19.0",
     "gulp": "^5.0.0",
     "jest": "^29.7.0",
     "organize-pkg": "^1.3.0",
     "replace": "^1.2.2",
     "rimraf": "^6.0.0",
     "ts-jest": "^29.2.5",
-    "ts-loader": "^9.5.1",
-    "typescript": "^5.7.2",
+    "ts-loader": "^9.5.2",
+    "typescript": "^5.7.3",
+    "typescript-eslint": "^8.22.0",
     "webpack": "^5.97.1",
-    "webpack-cli": "^5.1.4"
+    "webpack-cli": "^6.0.1"
   }
 }
