--- a/package.json
+++ b/package.json
@@ -67,7 +67,7 @@
     "up": "yarn upgrade-interactive --latest",
     "v": "yarn jstool -cmd version -extras \"./src/index.ts,\"",
     "webpack": "npm run fire:tool -- webpack",
-    "git:push": "yarn fire:tool force-push",
+    "git:push": "yarn fire:tool force_push",
     "postgit:push": "git gc --aggressive --prune=now",
     "strip:strict": "yarn jstool -cmd stripSome -regex \"/.use strict.;\\s/g\" -targets \"dist/cjs/index.js,dist/cjs/js-scanner.js,dist/cjs/gulp/index.js\""
   },
