--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "rm-cstyle-cmts",
-  "version": "3.3.21",
+  "version": "3.3.22",
   "description": "remove c style comments from text file(javascript source, json file etc...",
   "private": false,
   "main": "./cjs/index.js",
@@ -77,23 +77,24 @@
   ],
   "devDependencies": {
     "@jeffy-g/cpx": "^1.6.6",
-    "@stylistic/eslint-plugin": "^5.2.2",
+    "@stylistic/eslint-plugin": "^5.4.0",
     "@types/gulp": "^4.0.17",
     "@types/jest": "^30.0.0",
     "@types/vinyl": "^2.0.12",
-    "@typescript-eslint/parser": "^8.39.0",
+    "@typescript-eslint/parser": "^8.45.0",
     "ansi-colors": "^4.1.3",
-    "eslint": "^9.32.0",
+    "eslint": "^9.36.0",
     "gulp": "^5.0.1",
-    "jest": "^30.0.5",
+    "jest": "^30.2.0",
     "organize-pkg": "^1.3.1",
     "replace": "^1.2.2",
     "rimraf": "^6.0.0",
-    "ts-jest": "^29.4.1",
-    "ts-loader": "^9.5.2",
-    "typescript": "^5.9.2",
-    "typescript-eslint": "^8.39.0",
-    "webpack": "^5.101.0",
+    "tin-args": "^0.0.15",
+    "ts-jest": "^29.4.4",
+    "ts-loader": "^9.5.4",
+    "typescript": "^5.9.3",
+    "typescript-eslint": "^8.45.0",
+    "webpack": "^5.102.0",
     "webpack-cli": "^6.0.1"
   }
 }
