chore: Update dependencies and refactor scripts
This commit includes the following changes:

- Updates various development dependencies to their latest versions.
- Enhances the .gitignore file to exclude additional development-related files and directories.
- Refactors scripts to replace 'tin-args' with 'js-dev-tool/utils' for argument parsing.
- Updates script to use 'utils.writeText' instead of the deprecated 'utils.writeTextUTF8'.

--- a/.gitignore
+++ b/.gitignore
@@ -113,3 +113,15 @@ bin
 
 /dist
 memo*
+
+.gemini
+
+/.pret-ignore
+/.vscode
+/cliff.toml
+/dev-process*
+/local-tool*
+/new-readme*
+/prettier.config*
+/readme.*
+/tsconfig-esm*
