--- a/package.json
+++ b/package.json
@@ -75,25 +75,25 @@
     "ESLint JavaScript Plugin(rules): @eslint/js"
   ],
   "devDependencies": {
-    "@jeffy-g/cpx": "^1.6.6",
-    "@stylistic/eslint-plugin": "^5.4.0",
-    "@types/gulp": "^4.0.17",
+    "@jeffy-g/cpx": "^1.6.7",
+    "@stylistic/eslint-plugin": "^5.6.1",
+    "@types/gulp": "^4.0.18",
     "@types/jest": "^30.0.0",
     "@types/vinyl": "^2.0.12",
-    "@typescript-eslint/parser": "^8.45.0",
+    "@typescript-eslint/parser": "^8.47.0",
     "ansi-colors": "^4.1.3",
-    "eslint": "^9.36.0",
+    "eslint": "^9.39.1",
     "gulp": "^5.0.1",
     "jest": "^30.2.0",
-    "organize-pkg": "^1.3.1",
+    "js-dev-tool": "^1.0.7",
+    "organize-pkg": "^1.3.2",
     "replace": "^1.2.2",
-    "rimraf": "^6.0.0",
-    "tin-args": "^0.0.15",
-    "ts-jest": "^29.4.4",
+    "rimraf": "^6.1.2",
+    "ts-jest": "^29.4.5",
     "ts-loader": "^9.5.4",
     "typescript": "^5.9.3",
-    "typescript-eslint": "^8.45.0",
-    "webpack": "^5.102.0",
+    "typescript-eslint": "^8.47.0",
+    "webpack": "^5.103.0",
     "webpack-cli": "^6.0.1"
   }
 }
