refactor: Migrate webpack config to ESM, remove tiny scripts, and update dependencies
- Migrate webpack configuration from CommonJS (.js) to ES modules (.mjs), enhancing modularity and leveraging modern JavaScript features.
- Removed the `scripts/tiny` directory, consolidating utility functions and streamlining the project structure.
  Introduced `wp-progress.mjs` for webpack progress handling and integrated `tin-args` for command-line argument parsing, replacing older, custom implementations.
- Updated `tsconfig.json` to reflect modern module resolution (`node10`) and ignore deprecations, ensuring compatibility and improved development experience.
- Bumped version from v3.3.22 to v3.3.23.

--- a/package.json
+++ b/package.json
@@ -1,12 +1,29 @@
 {
   "name": "rm-cstyle-cmts",
-  "version": "3.3.22",
+  "version": "3.3.23",
   "description": "remove c style comments from text file(javascript source, json file etc...",
   "private": false,
   "main": "./cjs/index.js",
   "types": "./index.d.ts",
   "unpkg": "./umd/index.js",
   "sideEffects": false,
+  "exports": {
+    ".": {
+      "import": "./cjs/index.js",
+      "require": "./cjs/index.js",
+      "types": "./index.d.ts"
+    },
+    "./webpack": {
+      "import": "./webpack/index.js",
+      "require": "./webpack/index.js",
+      "types": "./index.d.ts"
+    },
+    "./umd": {
+      "import": "./umd/index.js",
+      "require": "./umd/index.js",
+      "types": "./index.d.ts"
+    }
+  },
   "author": "jeffy-g",
   "license": "MIT",
   "bugs": {
