feat: Add export maps for gulp module
This commit adds export maps for the gulp module to `package.json`.
This allows for proper module resolution when importing the gulp module.

--- a/package.json
+++ b/package.json
@@ -13,6 +13,11 @@
       "require": "./cjs/index.js",
       "types": "./index.d.ts"
     },
+    "./gulp": {
+      "import": "./cjs/gulp/index.js",
+      "require": "./cjs/gulp/index.js",
+      "types": "./cjs/gulp/index.d.ts"
+    },
     "./webpack": {
       "import": "./webpack/index.js",
       "require": "./webpack/index.js",
