feat: add subpath export for webpack/gulp
Added "./webpack/gulp" to the exports field in package.json to facilitate easier access to the gulp plugin.

--- a/package.json
+++ b/package.json
@@ -23,6 +23,11 @@
       "require": "./webpack/index.js",
       "types": "./index.d.ts"
     },
+    "./webpack/gulp": {
+      "import": "./webpack/gulp/index.js",
+      "require": "./webpack/gulp/index.js",
+      "types": "./webpack/gulp/index.d.ts"
+    },
     "./umd": {
       "import": "./umd/index.js",
       "require": "./umd/index.js",
