--- a/package.json
+++ b/package.json
@@ -72,6 +72,7 @@
   },
   "scripts": {
     "all": "yarn clean && eslint && yarn dist && yarn webpack && yarn copy:types && yarn preserve:jsdoc",
+    "bench:empty": "node -v && node ./build/cjs/bench/ -empty -l 5e7 -ol 10 | node ./build/cjs/bench/ -p",
     "bench": "node -v && node ./build/cjs/bench/ -f samples/es6.js -l 2000 -ol 10 | node ./build/cjs/bench/ -p",
     "benchmark": "cd etc/bench && yarn install && yarn start",
     "build:test": "tsc -m commonjs -t es2019 __tests__/test.ts",
@@ -92,7 +93,7 @@
     "ts:check": "tsc --noemit",
     "up": "yarn upgrade-interactive --latest",
     "v": "jstool -cmd version -extras \"./src/index.ts,\"",
-    "webpack": "npm run fire:tool -- webpack",
+    "webpack": "yarn fire:tool webpack",
     "git:push": "yarn fire:tool force_push",
     "postgit:push": "git gc --aggressive --prune=now",
     "strip:strict": "jstool -cmd replace -regex \"/.use strict.;\\s/g\" -targets \"dist/cjs/index.js,dist/cjs/js-scanner.js,dist/cjs/gulp/index.js\""
@@ -112,7 +113,7 @@
     "eslint": "^9.39.2",
     "gulp": "^5.0.1",
     "jest": "^30.2.0",
-    "js-dev-tool": "^1.0.9",
+    "js-dev-tool": "^1.0.12",
     "organize-pkg": "^1.3.2",
     "replace": "^1.2.2",
     "rimraf": "^6.1.2",
