--- a/package.json
+++ b/package.json
@@ -109,7 +109,7 @@
     "@types/jest": "^30.0.0",
     "@types/vinyl": "^2.0.12",
     "@typescript-eslint/parser": "^8.50.0",
-    "ansi-colors": "^4.1.3",
+    "colors.ts": "^1.0.20",
     "eslint": "^9.39.2",
     "gulp": "^5.0.1",
     "jest": "^30.2.0",
