--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "rm-cstyle-cmts",
-  "version": "3.4.2",
+  "version": "3.4.3",
   "description": "remove c style comments from text file(javascript source, json file etc...",
   "private": false,
   "main": "./cjs/index.js",
@@ -71,7 +71,7 @@
     "projectname": "rm-cstyle-cmts"
   },
   "scripts": {
-    "all": "yarn clean && eslint && yarn dist && yarn webpack && yarn copy:types && yarn preserve:jsdoc",
+    "all": "yarn clean && eslint && yarn dist && yarn webpack && yarn copy:types && yarn fire:tool fix_directives",
     "bench:empty": "node -v && node ./build/cjs/bench/ -empty -l 5e7 -ol 10 | node ./build/cjs/bench/ -p",
     "bench": "node -v && node ./build/cjs/bench/ -f samples/es6.js -l 2000 -ol 10 | node ./build/cjs/bench/ -p",
     "benchmark": "cd etc/bench && yarn install && yarn start",
@@ -87,7 +87,6 @@
     "ic": "rimraf yarn.lock node_modules && yarn install",
     "lint": "eslint",
     "patch:tag": "yarn fire:tool patch_with_tag",
-    "preserve:jsdoc": "yarn fire:tool del_usestrict && jstool -cmd rmc -rmc4ts -basePath \"./dist/cjs,./dist/cjs/gulp\" -test \"/\\.(js|d\\.ts)$/\"",
     "pretest": "rimraf -g ./coverage/*",
     "test": "bash -c \"[ -z $JEST_CONF ] && JEST_CONF=jest.config.js; jest --silent=false -c=$JEST_CONF\"",
     "toggle:cmts": "jstool -cmd cmtTrick -targets \"js-scanner.ts,\" -basePath src",
@@ -101,27 +100,28 @@
   },
   "//": [
     "NOTE: `strip:strict` use for publish (dist)",
+    "preserve:jsdoc - yarn fire:tool del_usestrict && jstool -cmd rmc -rmc4ts -basePath \"./dist/cjs,./dist/cjs/gulp\" -test \"/\\.(js|d\\.ts)$/\"",
     "ESLint JavaScript Plugin(rules): @eslint/js"
   ],
   "devDependencies": {
     "@jeffy-g/cpx": "^1.6.7",
-    "@stylistic/eslint-plugin": "^5.6.1",
+    "@stylistic/eslint-plugin": "^5.7.1",
     "@types/gulp": "^4.0.18",
     "@types/jest": "^30.0.0",
     "@types/vinyl": "^2.0.12",
-    "@typescript-eslint/parser": "^8.52.0",
+    "@typescript-eslint/parser": "^8.54.0",
     "colors.ts": "^1.0.20",
     "eslint": "^9.39.2",
     "gulp": "^5.0.1",
     "jest": "^30.2.0",
-    "js-dev-tool": "^1.2.0",
+    "js-dev-tool": "^1.2.3",
     "organize-pkg": "^1.3.2",
     "replace": "^1.2.2",
     "rimraf": "^6.1.2",
     "ts-jest": "^29.4.6",
     "ts-loader": "^9.5.4",
     "typescript": "^5.9.3",
-    "typescript-eslint": "^8.52.0",
+    "typescript-eslint": "^8.54.0",
     "webpack": "^5.104.1",
     "webpack-cli": "^6.0.1"
   }
